templatia-derive/tests/compile_fail/unsupported_result.stderr
error: unsupported type field: res has a Result<i32, String> type. currently, Result<i32, String> is not supported
 --> tests/compile_fail/unsupported_result.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile_fail/unsupported_result.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compile_fail/unsupported_result.rs`
